Add Created by SearchMas

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     <!-- Dashboard (hidden until login) -->
     <div class="dashboard hidden" id="dashboard">
         <header>
+            <p style="color:#00d2ff;font-size:0.9em;margin-bottom:5px;">Created by SearchMas</p>
             <h1>Google Core Update Impact</h1>
             <p>December 2025 | Analysis Period: Dec 9-10 vs Dec 11-12</p>
         </header>
