Fix: datos corregidos Dec 7-10 vs Dec 11-12 normalizados
- MAPS: 31 neg (6%) | 166 pos (33%)
- SEARCH: 142 neg (28%) | 36 pos (7%)
- Usando solo días con datos 100% consolidados
- Período después multiplicado x2 para normalizar

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <header>
             <p style="color:#00d2ff;font-size:0.9em;margin-bottom:5px;">Creado por SearchMas</p>
             <h1>Google Core Update Impact</h1>
-            <p>Diciembre 2025 | Período: Dec 7-10 vs Dec 11-14 (4 días cada uno, datos consolidados)</p>
+            <p>Diciembre 2025 | Período: Dec 7-10 vs Dec 11-12 (normalizado a 4 días)</p>
         </header>
 
         <div class="stats-row">
@@ -379,7 +379,7 @@
 
         <footer>
             Generado: <span id="generatedDate"></span> | Fuente: MeetSOCi Tenants Database (3 servidores)<br>
-            Período de análisis: Dec 7-10, 2025 vs Dec 11-14, 2025 (solo datos consolidados)
+            Período de análisis: Dec 7-10 vs Dec 11-12, 2025 (datos normalizados a 4 días)
         </footer>
     </div>
 
